--- a/JapaneseLetters/css/styles.css
+++ b/JapaneseLetters/css/styles.css
@@ -4,7 +4,7 @@
 *
 * @description. Styles for Japanese letters application
 * @version 1.0 
-* @copyright 2014 Henry ALgus. All rights reserved.
+* @author Henry Algus <henryalgus@gmail.com>
 *
 */
 
