--- a/JapaneseLetters/css/styles.css
+++ b/JapaneseLetters/css/styles.css
@@ -8,7 +8,7 @@
 *
 */
 
-.navbar-brand.active {
+.nav-item.active {
 	color:#fff;
 }
 
@@ -21,7 +21,7 @@
 	margin-top:20px;
 }
 
-.answers .container {
+.answers .letters-container {
 	width:235px;
 	margin:0 auto;
 }
